--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Car Price Prediction</title>
     <style>
         body {
-            background-image: url(r'static/image/car_image.jpg');
+            background-image: url("static/image/car_image.jpg");
             background-size: cover;
             text-align: center;
             font-family: Arial, sans-serif;
